--- a/package.json
+++ b/package.json
@@ -18,6 +18,17 @@
     "express-session": "^1.17.1",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.7",
-    "vue": "^3.0.7"
+    "vue": "^3.0.7",
+    "atob": "^2.1.2",
+    "bcrypt": "^5.0.1",
+    "body-parser": "^1.19.0",
+    "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.1",
+    "moment-timezone": "^0.5.33",
+    "mongodb": "^2.2.33",
+    "nodemailer": "^6.5.0",
+    "pino": "^6.11.2",
+    "pino-pretty": "^4.7.1",
+    "rand-token": "^1.0.1"
   }
 }
