--- a/package.json
+++ b/package.json
@@ -10,25 +10,31 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "atob": "^2.1.2",
+    "axios": "^0.21.1",
+    "bcrypt": "^5.0.1",
+    "body-parser": "^1.19.0",
     "bootstrap": "^5.0.0-beta2",
     "chalk": "^4.1.0",
+    "connect-history-api-fallback": "^1.6.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
-    "mysql": "^2.18.1",
-    "nodemon": "^2.0.7",
-    "vue": "^3.0.7",
-    "atob": "^2.1.2",
-    "bcrypt": "^5.0.1",
-    "body-parser": "^1.19.0",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.33",
     "mongodb": "^2.2.33",
+    "mysql": "^2.18.1",
     "nodemailer": "^6.5.0",
+    "nodemon": "^2.0.7",
     "pino": "^6.11.2",
     "pino-pretty": "^4.7.1",
-    "rand-token": "^1.0.1"
+    "rand-token": "^1.0.1",
+    "vue": "^3.0.11"
+  },
+  "devDependencies": {
+    "@vue/compiler-sfc": "^3.0.11",
+    "vue-loader": "^16.2.0"
   }
 }
