--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "pino": "^6.11.2",
     "pino-pretty": "^4.7.1",
     "rand-token": "^1.0.1",
+    "uuid": "^8.3.2",
     "vue": "^3.0.11"
   },
   "devDependencies": {
