--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon src/main.js"
+    "start": "nodemon src/main.js",
+    "scss": "node-sass --watch scss -o css"
   },
   "author": "",
   "license": "ISC",
@@ -26,6 +27,7 @@
     "moment-timezone": "^0.5.33",
     "mongodb": "^2.2.33",
     "mysql": "^2.18.1",
+    "node-sass": "^5.0.0",
     "nodemailer": "^6.5.0",
     "nodemon": "^2.0.7",
     "pino": "^6.11.2",
