--- a/package.json
+++ b/package.json
@@ -4,19 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon src/main.js",
-    "scss": "node-sass --watch scss -o css"
+    "test": "mocha ./test/* --exit"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "atob": "^2.1.2",
-    "axios": "^0.21.1",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
-    "bootstrap": "^5.0.0-beta2",
-    "chalk": "^4.1.0",
     "connect-history-api-fallback": "^1.6.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
@@ -25,9 +21,7 @@
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.33",
-    "mongodb": "^2.2.33",
     "mysql": "^2.18.1",
-    "node-sass": "^5.0.0",
     "nodemailer": "^6.5.0",
     "nodemon": "^2.0.7",
     "pino": "^6.11.2",
@@ -37,6 +31,8 @@
   },
   "devDependencies": {
     "@vue/compiler-sfc": "^3.0.11",
+    "mocha": "^8.3.2",
+    "supertest": "^6.1.3",
     "vue-loader": "^16.2.0"
   }
 }
